[package]
name = "range_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1", features = ["serde"] }
merlin = "1"
rand = "0.5.0-pre.2"
subtle = "2"
failure = "0.1"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dev-dependencies]
criterion = "0.2"
